# fastapi-agents-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_seed_defaults.py
app/: main.py
app/ai/: agents.py  model_names.py  prompts.py
app/api/: __init__.py  api.py
app/auth/: auth.py
app/core/: deps.py  errors.py  logging.py  middleware.py  rate_limiting.py  settings.py  telemetry.py
app/models/: db.py  mixins.py  models.py  repository.py
app/schemas/: schema.py
app/services/: llm_debate_service.py  llm_service.py  project_service.py
frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: chat-composer.tsx  chat-shell.tsx  chat-sidebar.tsx  chat-thread.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  textarea.tsx
tests/: conftest.py
tests/unit/: test_llm_service.py  test_logging.py  test_main.py  test_rate_limiting.py  test_telemetry.py  test_votes.py
tests/unit/integration/: test_logging.py
